style.css
/* These apply to the whole website */

*{
    margin: 0;
    padding: 0;
    font-family: 'Lato', sans-serif;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: rgb(6, 0, 24); 
    overflow-x: hidden;
    min-height: 100vh;
}

/* Home page */

#container{
    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/reverse\ background.png); 
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    margin: 0;
    padding: 0;
    /* background-attachment: fixed;  --- cool effect */
}

#navbar{
    display: flex;
    padding: 2%;
    justify-content: space-between;
    align-items: center;
    margin: auto;
}

#nick-logo{
    width: 150px;
    padding: 2%;
}

.nav-content{
    flex: 1;
    text-align: right;
}

.nav-content p{
    list-style: none;
    display: inline-block;
    padding: 3px;
    position: relative;
    color: grey;
    text-decoration: none;
    font-size: 25px;
}

.nav-content ul li{
    list-style: none;
    display: inline-block;
    padding: 3px;
    position: relative;
}

.nav-content ul li a{
    color: white;
    text-decoration: none;
    font-size: 25px;
}

.nav-content ul{
    font-size: 0;  
}

.nav-content ul li::after{
    content: '';
    width: 0%;
    height: 2px;
    background: lightblue;
    display: block;
    margin: auto;
    transition: 0.5s;
}

.nav-content ul li:hover::after{
    width: 100%;
}

.nav-content p:hover {
    cursor: default;
}

#homepage {
    display: flex;
    justify-content: center;
    gap: 5rem;
    height: 75vh;
    background-color: transparent;
    align-items: center;
}
  
.circlepfp-container {
    display: flex;
    height: 400px;
    width: 400px;
    margin: 0 0;
    justify-content: center; 
    align-items: center;
    margin-bottom: 200px;
}
.circlepfp-container img {
    max-width: 300px; 
    max-height: 300px; 
}
  
.homepage-text {
    align-self: center;
    text-align: center;
    margin: 0 0;
    text-align: left;
    margin-bottom: 160px;
}
  
.homepage-text p {
    font-weight: 600;
    
}

.homepage-text:hover {
    cursor: default;
}
  
.p1 {
    text-align: center;
    color: grey;
    font-size: 20px;
}
  
.p2 {
    font-size: 1.75rem;
    margin-bottom: 1rem;
    color: white;
}
  
.homepage-title {
    font-size: 3rem;
    text-align: center;
    color: white;
}
  
#socials-container {
    display: flex;
    justify-content: center;
    margin-top: 1rem;
    gap: 1rem;
    align-items: center;
}
  
.icon1{
    cursor: pointer;
    height: 4rem;
}

.icon2{
    cursor: pointer;
    height: 3rem;
}
  
.button-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
}
  
.btn {
    font-weight: 600;
    transition: all 300ms ease;
    padding: 1rem;
    width: 8rem;
    border-radius: 2rem;
}
  
.btn-contact, .btn-cv {
    border: rgb(53, 53, 53) 0.1rem solid;
    color: white;
    background: none;
    background-color: #ffffff25;
}
  
.btn-cv:hover, .btn-contact:hover {
    cursor: pointer;
    background: rgb(0, 0, 0);
    border: rgb(255, 255, 255) 0.1rem solid;
    background-color: gray;
}

.menu-icon{
    height: 15px;
    width: 15px; 
    display: block; 
    
}

.burger-menu {
    display: none;
    flex-direction: column;
    cursor: pointer;
    
}

.burger-bar {
    width: 30px;
    height: 3px;
    background-color: white;
    margin: 5px 0;
    transition: 0.3s;
}

.burger-menu.hidden {
    display: none; 
}

/* Side Menu Styling */
.side-menu {
    position: fixed;
    top: 0;
    right: 0;
    height: 100%;
    width: 250px;
    background-color: rgba(64, 64, 64, 0.9); 
    transform: translateX(100%);
    transition: transform 0.3s ease;
    z-index: 1000;
    padding: 20px;
    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(10px);
}

.side-menu ul {
    padding-top: 80px;
    list-style: none;
    padding: 0;
}

.side-menu ul li {
    margin: 20px 0;
}

.side-menu ul li a {
    
    color: white;
    text-decoration: none;
    font-size: 20px;
}

.side-menu .close-btn {
    font-size: 30px;
    color: white;
    cursor: pointer;
    text-align: right;
}

.side-menu.active {
    transform: translateX(0);
}

.scroll-indicator {
    text-align: center;
    position: relative;
    bottom: 110px;
    font-family: Arial, sans-serif;
}

.scroll-indicator p {
    padding-top: 30px;
    color: white;
    font-size: 18px;
    margin: 0;
    padding-bottom: 10px;
    animation: fadeInText 4s infinite;
}

#down-arrow {
    width: 24px; 
    height: auto;
    display: block;
    margin: 0 auto;
    animation: bounce 3s infinite; 
    height: 50px;
    width: 50px;
    padding: 10px;
}

/* Arrow bounce animation */
@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0);
    }
    40% {
        transform: translateY(10px); 
    }
    60% {
        transform: translateY(5px);  
    }
}

/* Text fade animation */
@keyframes fadeInText {
    0%, 100% {
        opacity: 1;
    }
    50% {
        opacity: 0.5;
    }
}


@media (max-width: 1200px) {
    #homepage{
        margin-top: 125px;
        flex-direction: column; 
        align-items: center;
    }

    .circlepfp-container {
        width: 275px;
        height: 275px;
        margin: 0 auto;
        
    }

    .homepage-text{
        margin-top: -40px;
    }

    .scroll-indicator{
        bottom: 150px;
    }

    .p2 {
        font-size: 1.25rem;
        text-align: center;
    }
}


@media (max-width: 1100px) {
    .nav-content {
        display: none; 
    }

    .burger-menu {
        display: flex; 
        margin-right: 15px;
    }
}


/* About page */

#about-me {
    display: flex;
    padding: 20px;
    align-items: center; 
}

.title {
    font-size: 40px;
    text-align: center;
    margin-bottom: 100px;
    color: white;
}

.title-p1 {
    font-size: 20px;
    text-align: center;
    margin-top: 50px;
    margin-bottom: 1px;
    color: grey;
}
/* ... */

